Split lines differences in fileList template to align correctly added and deleted lines

--- a/web/css/list.less
+++ b/web/css/list.less
@@ -145,7 +145,7 @@
 
           &.file_infos {
             color: #777;
-            text-align: center;
+            text-align: right;
             font-size: @smallFont;
             background-color: #f5f5f5;
 
